--- a/EXA_U2/app/src/main/res/layout/item_restaurante.xml
+++ b/EXA_U2/app/src/main/res/layout/item_restaurante.xml
@@ -55,9 +55,11 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_marginEnd="4dp"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginEnd="4dp"
+        android:layout_weight="1"
         android:numStars="3"
         android:scrollbarSize="@android:dimen/thumbnail_width"
         android:stepSize="1" />
