--- a/EXA_U2/app/src/main/res/layout/item_restaurante.xml
+++ b/EXA_U2/app/src/main/res/layout/item_restaurante.xml
@@ -3,18 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_margin="4dp">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/circularImageView"
+    <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
         android:layout_weight="1"
-        app:civ_shadow="false"
-        app:srcCompat="@drawable/posho" />
+        android:src="@drawable/ic_launcher_background"/>
 
 
     <LinearLayout
@@ -22,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/textView"
@@ -31,7 +27,7 @@
             android:layout_marginBottom="4dp"
             android:text="Nombre del Restaurante"
             android:textColor="#000"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
@@ -58,10 +54,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginEnd="4dp"
-        android:layout_weight="1"
+        android:layout_weight="1.65"
+        android:rating="2"
         android:numStars="3"
-        android:scrollbarSize="@android:dimen/thumbnail_width"
         android:stepSize="1" />
 
 </LinearLayout>
