numero de estrellas en el ratingStar

--- a/EXA_U2/app/src/main/res/layout/item_restaurante.xml
+++ b/EXA_U2/app/src/main/res/layout/item_restaurante.xml
@@ -54,9 +54,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1.65"
-        android:rating="2"
+        android:layout_weight="1"
+        android:max="3"
         android:numStars="3"
+        android:rating="2"
         android:stepSize="1" />
 
 </LinearLayout>
