--- a/EXA_U2/app/src/main/res/layout/activity_capture.xml
+++ b/EXA_U2/app/src/main/res/layout/activity_capture.xml
@@ -25,7 +25,7 @@
             android:textSize="40dip" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imgRest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/posho"
