--- a/EXA_U2/app/src/main/res/layout/item_platillo.xml
+++ b/EXA_U2/app/src/main/res/layout/item_platillo.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imgElem"
+        android:id="@+id/imgPlatillo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
