--- a/EXA_U2/app/src/main/res/layout/lista_restaurantes.xml
+++ b/EXA_U2/app/src/main/res/layout/lista_restaurantes.xml
@@ -15,6 +15,7 @@
         android:textAlignment="center"/>
 
     <ListView
+        android:id="@+id/listRest"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
