seleccion de imagen de list view en capturar

--- a/EXA_U2/app/src/main/res/layout/activity_capture.xml
+++ b/EXA_U2/app/src/main/res/layout/activity_capture.xml
@@ -26,10 +26,11 @@
 
         <ImageView
             android:id="@+id/imgRest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="400dp"
+            android:layout_height="150dp"
             android:layout_marginHorizontal="7dip"
             android:layout_marginBottom="5dip"
+            android:layout_gravity="center"
             app:srcCompat="@drawable/platillo" />
         <TextView
             android:layout_width="match_parent"
